I removed the trailing slash on void elements

--- a/temples.html
+++ b/temples.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script defer src="scripts/temples.js"></script>
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Federico Pereyra"/>
-    <meta name="author" content="Federico Pereyra"/>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Federico Pereyra">
+    <meta name="author" content="Federico Pereyra">
 </head>
 <body>
     <header>
