i deleted "Trailing slash"

--- a/place.html
+++ b/place.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-large.css">
     <script src="scripts/place.js" defer></script>
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Federico Pereyra"/>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Federico Pereyra">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Freeman&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
