add the second wireframe

--- a/Project/siteplan.html
+++ b/Project/siteplan.html
@@ -70,6 +70,7 @@
     <h2>Home</h2>
 
     <img src="images/home-page-wireframe.png" alt="home page wireframe">
+    <img src="images/Home-page-wireframe-large.png" alt="home page wireframe large">
 
 
     </main>
